--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,10 @@ members = ["xtask"]
 crate-type = ["cdylib"]
 
 [dependencies]
-# Remove the `assert_process_allocs` feature to allow allocations on the audio
-# thread in debug builds.
-nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
+nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
 # Uncomment the below line to disable the on-by-default VST3 feature to remove
 # the GPL compatibility requirement
 # nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }
+
+[dev-dependencies]
+assert_no_alloc = { git = "https://github.com/Windfisch/rust-assert-no-alloc", features = ["backtrace"] }
